
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int empty ;


 int PAGE_SIZE ;
 int debug1 (char*,unsigned long,size_t) ;
 int memset (char*,int ,int) ;
 size_t min (size_t,size_t) ;
 scalar_t__ page_check_virt (unsigned long) ;
 int read_range (unsigned long,size_t,char*) ;
 int write_bytes (int,unsigned long,char*,size_t) ;

void read_virt_memory(unsigned long addr, size_t length, int fd) {
 char buffer[PAGE_SIZE];
 char empty[PAGE_SIZE];

 debug1("read_virt_memory: addr = %016lx, length = %016lx\n",
   addr, length);

 memset(&empty[0], 0, sizeof(empty));

 size_t total_read = 0;
 while (total_read < length) {
  unsigned long current = addr + total_read;
  size_t to_read = PAGE_SIZE;
  if (current % PAGE_SIZE != 0)
   to_read = PAGE_SIZE - current % PAGE_SIZE;
  to_read = min(to_read, length - total_read);
  if (page_check_virt(addr + total_read)) {
   read_range(addr + total_read, to_read, &buffer[0]);
   write_bytes(fd, addr + total_read, &buffer[0], to_read);
  } else {
   write_bytes(fd, addr + total_read, &empty[0], to_read);
  }
  total_read += to_read;
 }
}
